--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -279,16 +279,26 @@ body {
   }
   a {
     text-decoration: underline;
-    padding-top: $mobile-site-header-height;
+    // This css part looks complicated but is required to prevent highlighting 
+    // text with inline links to include padding-top
+    &[href*="#"]:before {
+      display: inline;
+      content: "";
+      text-decoration: none;
+      position: relative;
+      top: -$mobile-site-header-height;
+      visibility: hidden;
+    }
   }
+
   h2,
   h3,
   h4,
   h5,
-  h6,
-  a {
+  h6 {
     margin-top: -$mobile-site-header-height;
   }
+
   @include desktop-screen {
     h1 {
       padding-top: calc(2 * #{$block-spacing});
@@ -308,15 +318,14 @@ body {
     h6 {
       padding-top: calc(1 * #{$block-spacing} + #{$site-doc-header-height});
     }
-    a {
-      padding-top: $site-doc-header-height;
+    a[href*="#"]:before {
+      top: -$site-doc-header-height;
     }
     h2,
     h3,
     h4,
     h5,
-    h6,
-    a {
+    h6 {
       margin-top: calc(-1 * #{$site-doc-header-height});
     }
   }
